A buch of changes and fixes to make the code more future proof and more compatible with Minecraft 1.14.4