@@ -1,7 +1,10 @@
 package org.wargamer2010.signshop.player;
 
+import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.Objects;
+
 import net.milkbowl.vault.economy.EconomyResponse;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
@@ -10,66 +13,41 @@ import org.bukkit.OfflinePlayer;
 import org.bukkit.World;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
-import org.wargamer2010.signshop.Seller;
+import org.wargamer2010.signshop.Shop;
 import org.wargamer2010.signshop.SignShop;
 import org.wargamer2010.signshop.Vault;
 import org.wargamer2010.signshop.configuration.SignShopConfig;
 import org.wargamer2010.signshop.configuration.Storage;
-import org.wargamer2010.signshop.util.itemUtil;
+import org.wargamer2010.signshop.util.ItemUtil;
 
 public class SignShopPlayer {
-    private String playername = "";
-    private PlayerIdentifier playerId = null;
-    private PlayerMetadata meta = new PlayerMetadata(this, SignShop.getInstance());
+    private String playerName;
+    private final PlayerIdentifier playerId;
+    private final PlayerMetadata  meta = new PlayerMetadata(this, SignShop.getInstance());
     private boolean ignoreMessages = false;
 
-    public SignShopPlayer() {
-        playername = "";
-    }
-
     public SignShopPlayer(PlayerIdentifier id) {
-        if(id == null)
-            return;
-        playername = id.getName();
-        playerId = id;
+        Objects.requireNonNull(id, "PlayerIdentififier cannot be null");
 
-        if(playername == null)
-            playername = "";
+        this.playerId = id;
+        this.playerName = id.getName();
+
+        if (this.playerName == null)
+            this.playerName = "";
     }
 
-    public SignShopPlayer(Player pPlayer) {
-        if(pPlayer != null) {
-            playerId = new PlayerIdentifier(pPlayer);
-            playername = playerId.getName();
-        }
+    public SignShopPlayer(Player player) {
+        Objects.requireNonNull(player, "Player cannot be null");
 
-        if(playername == null)
-            playername = "";
+        this.playerId = new PlayerIdentifier(player);
+        this.playerName = player.getName();
     }
 
-    /**
-     * Constructs a SignshopPlayer by player name
-     * This is a legacy constructor and is purely here for backwards compatibility
-     *
-     * @param name Player name
-     * @deprecated Lookup by name has been deprecated so use the PlayerIdentifier alternative in stead
-     */
-    @Deprecated
-    public SignShopPlayer(String name) {
-        SignShopPlayer player = PlayerIdentifier.getByName(name);
-        if(player != null) {
-            playerId = player.GetIdentifier();
-            playername = player.getName();
-        }
-
-        if(playername == null)
-            playername = "";
-    }
-
+    //TODO move this to another class? plugin main class?
     public static void broadcastMsg(World world, String sMessage) {
-        for(Player player : Bukkit.getServer().getOnlinePlayers())
-            if(player.getWorld() == world)
-                player.sendMessage(ChatColor.GOLD+"[SignShop] [" + world.getName() + "] " + ChatColor.WHITE + sMessage);
+        for(Player player : world.getPlayers()) {
+            player.sendMessage(ChatColor.GOLD + "[SignShop] [" + world.getName() + "] " + ChatColor.WHITE + sMessage);
+        }
     }
 
     public void sendMessage(String sMessage) {
@@ -85,14 +63,18 @@ public class SignShopPlayer {
     }
 
     public void sendNonDelayedMessage(String sMessage) {
-        if(sMessage == null || sMessage.trim().isEmpty() || getPlayer() == null || ignoreMessages)
-            return;
+        if (sMessage == null || sMessage.trim().isEmpty() || getPlayer() == null || ignoreMessages) return;
+
         String message = (ChatColor.GOLD + "[SignShop] " + ChatColor.WHITE + sMessage);
         getPlayer().sendMessage(message);
     }
 
     public String getName() {
-        return playername;
+        if (playerName == null || playerName.isEmpty()) {
+            playerName = playerId.getName();
+        }
+
+        return playerName;
     }
 
     public Player getPlayer() {
@@ -103,16 +85,25 @@ public class SignShopPlayer {
         return (getPlayer() == null) ? null : getPlayer().getWorld();
     }
 
-    public boolean compareTo(SignShopPlayer other) {
-        if(other == null)
-            return false;
-        if(GetIdentifier() == null)
-            return other.GetIdentifier() == null;
-        return other.GetIdentifier().equals(GetIdentifier());
+    public boolean equals(SignShopPlayer other) {
+        if (other == this) return true;
+        return Objects.equals(this.playerId, other.playerId);
+    }
+
+    public boolean equals(Object o) {
+        if (o == this) return true;
+        if (!(o instanceof SignShopPlayer)) return false;
+
+        SignShopPlayer that = (SignShopPlayer) o;
+        return Objects.equals(this.playerId, that.playerId);
+    }
+
+    public int hashCode() {
+        return Objects.hashCode(playerId);
     }
 
     public void setOp(Boolean OP) {
-        if(playername.isEmpty())
+        if(playerName.isEmpty())
             return;
         if(getPlayer() == null) {
             OfflinePlayer player = playerId.getOfflinePlayer();
@@ -142,16 +133,16 @@ public class SignShopPlayer {
     }
 
     public boolean isOp(World world, String perm) {
-        if(isOpRaw())
+        if (isOpRaw())
             return true;
         String fullperm = (perm.isEmpty() ? "SignShop.SuperAdmin" : "SignShop.SuperAdmin." + perm);
-        if(SignShop.usePermissions() && Vault.getPermission().playerHas(world, playername, fullperm.toLowerCase()))
+        if (SignShop.usePermissions() && Vault.getPermission().playerHas(world, playerName, fullperm.toLowerCase()))
             return true;
         return false;
     }
 
     private boolean isOpRaw() {
-        if(playername.isEmpty())
+        if(playerName.isEmpty())
             return false;
         if(getPlayer() == null) {
             OfflinePlayer offplayer = playerId.getOfflinePlayer();
@@ -175,9 +166,13 @@ public class SignShopPlayer {
         return hasPerm(perm, getPlayer().getWorld(), OPOperation);
     }
 
-    public boolean hasPerm(String perm, World world, Boolean OPOperation) {
-        if(playername == null || playername.isEmpty())
-            return true;
+    public boolean hasPerm(String perm, World world, boolean OpOperation) {
+        if (playerName == null || playerName.isEmpty()) return true;
+
+        // Bukkit permissions take priority
+        Player bukkitPlayer = Bukkit.getPlayerExact(playerName);
+        if (bukkitPlayer != null) return bukkitPlayer.hasPermission(perm);
+
         Boolean isOP = isOpRaw();
         Boolean OPOverride = SignShopConfig.getOPOverride();
 
@@ -188,7 +183,7 @@ public class SignShopPlayer {
 
         // Having Signshop.Superadmin while Permissions are in use should allow you to do everything with SignShop
         // And since the node is explicitly given to a player, the OPOverride setting is not relevant
-        if(SignShop.usePermissions() && Vault.getPermission().playerHas(world, playername, "signshop.superadmin")) {
+        if(SignShop.usePermissions() && Vault.getPermission().playerHas(world, playerName, "signshop.superadmin")) {
             setOp(isOP);
             return true;
         }
@@ -197,14 +192,14 @@ public class SignShopPlayer {
         if(SignShop.usePermissions() && OPOverride && isOP)
             return true;
         // Using Permissions so check his permissions and restore his OP if he has it
-        else if(SignShop.usePermissions() && Vault.getPermission().playerHas(world, playername, perm.toLowerCase())) {
+        else if(SignShop.usePermissions() && Vault.getPermission().playerHas(world, playerName, perm.toLowerCase())) {
             setOp(isOP);
             return true;
         // Not using Permissions but he is OP, so he's allowed
         } else if(!SignShop.usePermissions() && isOP)
             return true;
         // Not using Permissions, he doesn't have OP but it's not an OP Operation
-        else if(!SignShop.usePermissions() && !OPOperation)
+        else if(!SignShop.usePermissions() && !OpOperation)
             return true;
         // Reset OP
         setOp(isOP);
@@ -212,8 +207,11 @@ public class SignShopPlayer {
     }
 
     private boolean isNothing(double amount) {
-        Double doubler = new Double(amount);
-        return (doubler == 0.0f || doubler.isInfinite() || doubler.isNaN());
+        Double doubler = Double.valueOf(amount);
+        int topInt = (int) Math.ceil(amount);
+        int bottomInt = (int) Math.floor(amount);
+
+        return (topInt == 0 && bottomInt == 0) || doubler.isInfinite() || doubler.isNaN();
     }
 
     public boolean hasMoney(double amount) {
@@ -221,89 +219,90 @@ public class SignShopPlayer {
             return true;
         if(Vault.getEconomy() == null)
             return false;
-        if(playername.isEmpty())
+        if(playerName.isEmpty())
             return true;
         else
-            return Vault.getEconomy().has(playername, amount);
+            return Vault.getEconomy().has(playerName, amount);
     }
 
     public boolean canHaveMoney(double amount) {
         // Negative amounts make no sense in this context, so fix it if needed
         double actual = amount < 0 ? (amount * -1) : amount;
 
-        if(isNothing(actual))
+        if (isNothing(actual))
             return true;
-        if(Vault.getEconomy() == null)
+        if (Vault.getEconomy() == null)
             return false;
-        if(playername.isEmpty())
+        if (playerName.isEmpty())
             return true;
+
+        OfflinePlayer myOfflinePlayer = getIdentifier().getOfflinePlayer();
         EconomyResponse response;
-        double currentBalance = Vault.getEconomy().getBalance(playername);
+        double currentBalance = Vault.getEconomy().getBalance(myOfflinePlayer);
 
         try {
-            response = Vault.getEconomy().depositPlayer(playername, actual);
+            response = Vault.getEconomy().depositPlayer(myOfflinePlayer, actual);
         } catch(java.lang.RuntimeException ex) {
             response = new EconomyResponse(0, 0, EconomyResponse.ResponseType.FAILURE, "");
         }
 
-        double newBalance = Vault.getEconomy().getBalance(playername);
+        double newBalance = Vault.getEconomy().getBalance(playerName);
         double subtract = (newBalance - currentBalance);
 
-        if(response.type == EconomyResponse.ResponseType.SUCCESS) {
-            response = Vault.getEconomy().withdrawPlayer(playername, subtract);
+        if (response.type == EconomyResponse.ResponseType.SUCCESS) {
+            response = Vault.getEconomy().withdrawPlayer(myOfflinePlayer, subtract);
             return response.type == EconomyResponse.ResponseType.SUCCESS;
-        }
-        else {
+        } else {
             return false;
         }
     }
 
     public boolean mutateMoney(double amount) {
-        if(Vault.getEconomy() == null)
+        if (Vault.getEconomy() == null)
             return false;
-        if(playername.isEmpty() || isNothing(amount))
+        if (playerName.isEmpty() || isNothing(amount))
             return true;
         EconomyResponse response;
         try {
-            if(amount > 0.0)
-                response = Vault.getEconomy().depositPlayer(playername, amount);
+            if (amount > 0.0)
+                response = Vault.getEconomy().depositPlayer(playerName, amount);
             else if(amount < 0.0)
-                response = Vault.getEconomy().withdrawPlayer(playername, Math.abs(amount));
+                response = Vault.getEconomy().withdrawPlayer(playerName, Math.abs(amount));
             else
                 return true;
-        } catch(java.lang.RuntimeException ex) {
-            response = new EconomyResponse(0, 0, EconomyResponse.ResponseType.FAILURE, "");
+        } catch (RuntimeException ex) {
+            response = new EconomyResponse(0, 0, EconomyResponse.ResponseType.FAILURE, "Something went wrong when trying to deposit/withdraw money.");
         }
 
-        if(response.type == EconomyResponse.ResponseType.SUCCESS)
-            return true;
-        else
-            return false;
+        return response.transactionSuccess();
     }
 
-    public Map<Integer, ItemStack> givePlayerItems(ItemStack[] isItemsToTake) {
-        if(getPlayer() == null)
-            return new LinkedHashMap<Integer, ItemStack>();
-        ItemStack[] isBackup = itemUtil.getBackupItemStack(isItemsToTake);
-        return getPlayer().getInventory().addItem(isBackup);
+    public Map<Integer, ItemStack> givePlayerItems(ItemStack[] itemsToGive) {
+        if (getPlayer() == null)
+            return new LinkedHashMap<>();
+        ItemStack[] itemsToGiveToThePlayer = Arrays.stream(itemsToGive)
+                .filter(Objects::nonNull)
+                .map(ItemUtil::getBackupItemStack)
+                .toArray(ItemStack[]::new);
+        return getPlayer().getInventory().addItem(itemsToGiveToThePlayer);
     }
 
     public Map<Integer, ItemStack> takePlayerItems(ItemStack[] isItemsToTake) {
-        if(getPlayer() == null)
-            return new LinkedHashMap<Integer, ItemStack>();
-        ItemStack[] isBackup = itemUtil.getBackupItemStack(isItemsToTake);
+        if (getPlayer() == null)
+            return new LinkedHashMap<>();
+        ItemStack[] isBackup = ItemUtil.getBackupItemStack(isItemsToTake);
         return getPlayer().getInventory().removeItem(isBackup);
     }
 
     public VirtualInventory getVirtualInventory() {
-        if(getPlayer() == null)
+        if (getPlayer() == null)
             return null;
         return new VirtualInventory(getPlayer().getInventory());
     }
 
     private String[] getPlayerGroups() {
         String[] sGroups = null;
-        if(getPlayer() == null)
+        if (getPlayer() == null)
             return sGroups;
         try {
             sGroups = Vault.getPermission().getPlayerGroups((String)null, getPlayer());
@@ -317,15 +316,15 @@ public class SignShopPlayer {
         Double fPricemod = 1.0d;
         Double fTemp;
 
-        if(Vault.getPermission() == null || getPlayer() == null)
+        if (Vault.getPermission() == null || getPlayer() == null)
             return fPricemod;
         String[] sGroups = getPlayerGroups();
-        if(sGroups == null) return fPricemod;
+        if (sGroups == null) return fPricemod;
 
         boolean firstRun = true;
-        if(sGroups.length == 0)
+        if (sGroups.length == 0)
             return fPricemod;
-        for(int i = 0; i < sGroups.length; i++) {
+        for (int i = 0; i < sGroups.length; i++) {
             String sGroup = sGroups[i].toLowerCase();
             if(SignShopConfig.getPriceMultipliers().containsKey(sGroup) && SignShopConfig.getPriceMultipliers().get(sGroup).containsKey(sOperation)) {
                 fTemp = SignShopConfig.getPriceMultipliers().get(sGroup).get(sOperation);
@@ -341,26 +340,26 @@ public class SignShopPlayer {
     }
 
     public int reachedMaxShops() {
-        if(Vault.getPermission() == null || playername.isEmpty())
+        if (Vault.getPermission() == null || playerName.isEmpty())
             return 0;
-        if(hasPerm("SignShop.ignoremax", true))
+        if (hasPerm("SignShop.ignoremax", true))
             return 0;
 
         String[] sGroups = getPlayerGroups();
         int iShopAmount = Storage.get().countLocations(this);
 
-        if(SignShopConfig.getMaxShopsPerPerson() != 0 && iShopAmount >= SignShopConfig.getMaxShopsPerPerson()) return SignShopConfig.getMaxShopsPerPerson();
-        if(sGroups == null) return 0;
+        if (SignShopConfig.getMaxShopsPerPerson() != 0 && iShopAmount >= SignShopConfig.getMaxShopsPerPerson()) return SignShopConfig.getMaxShopsPerPerson();
+        if (sGroups == null) return 0;
 
         int iLimit = 1;
-        Boolean bInRelGroup = false;
-        for(int i = 0; i < sGroups.length; i++) {
+        boolean bInRelGroup = false;
+        for (int i = 0; i < sGroups.length; i++) {
             String sGroup = sGroups[i].toLowerCase();
-            if(SignShopConfig.getShopLimits().containsKey(sGroup)) {
+            if (SignShopConfig.getShopLimits().containsKey(sGroup)) {
                 bInRelGroup = true;
-                if(iShopAmount < SignShopConfig.getShopLimits().get(sGroup))
+                if (iShopAmount < SignShopConfig.getShopLimits().get(sGroup))
                     iLimit = 0;
-                else if(iLimit != 0 && SignShopConfig.getShopLimits().get(sGroup) > iLimit)
+                else if (iLimit != 0 && SignShopConfig.getShopLimits().get(sGroup) > iLimit)
                     iLimit = SignShopConfig.getShopLimits().get(sGroup);
             }
 
@@ -370,16 +369,22 @@ public class SignShopPlayer {
     }
 
     public ItemStack[] getInventoryContents() {
-        if(getPlayer() == null)
+        if (getPlayer() == null)
             return new ItemStack[0];
         ItemStack[] temp = getPlayer().getInventory().getContents();
-        itemUtil.fixBooks(temp);
+        ItemUtil.fixBooks(temp);
         return temp;
     }
 
+    /**
+     * @deprecated can shuffle the entire player's inventory - use remove or add operations instead!
+     * @param newContents
+     */
+    @Deprecated
     public void setInventoryContents(ItemStack[] newContents) {
-        if(getPlayer() == null)
+        if (getPlayer() == null)
             return;
+
         getPlayer().getInventory().setContents(newContents);
     }
 
@@ -387,7 +392,7 @@ public class SignShopPlayer {
         return (playerId != null && playerId.getOfflinePlayer() != null);
     }
 
-    public PlayerIdentifier GetIdentifier() {
+    public PlayerIdentifier getIdentifier() {
         return playerId;
     }
 
@@ -412,22 +417,23 @@ public class SignShopPlayer {
     }
 
     public ItemStack getItemInHand() {
-        if(getPlayer() == null)
+        if (getPlayer() == null)
             return null;
-        ItemStack stack = getPlayer().getItemInHand();
-        if(stack.getType() == Material.getMaterial("AIR"))
+        ItemStack stack = getPlayer().getInventory().getItemInMainHand();
+        if (stack.getType() == Material.getMaterial("AIR"))
             return null;
         return stack;
     }
 
-    public boolean isOwner(Seller seller) {
-        return seller.getOwner().compareTo(this);
+    public boolean isOwner(Shop shop) {
+        return shop.getOwner().equals(this);
     }
 
     public void setIgnoreMessages(boolean ignoreMessages) {
         this.ignoreMessages = ignoreMessages;
     }
 
+    //TODO use this in SignShopPlayer#sendMessage
     public boolean isIgnoreMessages() {
         return ignoreMessages;
     }
